2014-XX-XX Jan Kotanski <jankotan@gmail.com>
	* adding datasources into attributes
	* tagged as 1.7.0

2014-10-13 Jan Kotanski <jankotan@gmail.com>
	* making work around for astor strangeness of add_class args
	* cleaning the code
	* tagged as 1.6.3

2014-08-26 Jan Kotanski <jankotan@gmail.com>
	* adding auto growing of fields
	* tagged as 1.6.2

2014-08-21 Jan Kotanski <jankotan@gmail.com>
	* enables saving images and spectra in fields with larger dims
	* tagged as 1.6.1

2014-07-11 Jan Kotanski <jankotan@gmail.com>
	* making python API more similar to Tango one:
	* 	getNXFile -> getFile
	* 	openNXFile -> openFile
	* 	closeNXFile -> closeFile
        * 	jsonRecord -> jsonrecord 
        * 	xmlSettings -> xmlsettings
        * 	numThreads -> numberOfThreads
	* tagged as 1.6.0

2014-07-10 Jan Kotanski <jankotan@gmail.com>
	* adding reraising Tango exceptions
	* tagged as 1.5.5

2014-03-03 Jan Kotanski <jankotan@gmail.com>
	* adding exception on rank missmatch
	* tagged as 1.5.4

2014-01-16 Jan Kotanski <jankotan@gmail.com>
	* comming back to 'nexdatas' package name
	* tagged as 1.5.3

2014-01-03 Jan Kotanski <jankotan@gmail.com>
	* moves NXSDataServer into nxswriter module
	* tagged as 1.5.2

2013-12-12 Jan Kotanski <jankotan@gmail.com>
	* fixies for status method
	* tagged as 1.5.1

2013-12-10 Jan Kotanski <jankotan@gmail.com>
	* changing TangoDataWriter.thejson into  TangoDataWriter.jsonRecord
	* changing TheXMLSettings into XMLSettings
	* changing TheJSONRecord into JSONRecord
	* changing TangoDataServer into NXSDataWriter
	* changing ndts into nxswriter
	* tagged as 1.5.0

2013-12-03 Jan Kotanski <jankotan@gmail.com>
	* making changes in spaces
	* tagged as 1.4.4

2013-11-26 Jan Kotanski <jankotan@gmail.com>
	* adding dev_state implementation
	* tagged as 1.4.3

2013-11-19 Jan Kotanski <jankotan@gmail.com>
	* fixes interference of TANGO groups and reshaping TANGO memeber
	* tagged as 1.4.2

2013-11-13 Jan Kotanski <jankotan@gmail.com>